German/Lenguajes y compiladores/Lab3/tests/bad/bad11.imp
data Bool = True | False
data N = O | S <N>

method suma (n : N, b : Bool) returns (r : N)
{
    -- bad constructor in branch
    case n of {
         True -> r := O [];
         S [m] -> r := r
   }
} 
